Updated the report to match prev commit.

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -394,13 +394,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_NoV-TT.csv\") and os.path.getsize(\"results/all_NoV-TT.csv\") > 0:\n",
-    "    NoV_TT_df = pd.read_csv(\"results/all_NoV-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_NoV-TT.csv\") and os.path.getsize(\"results/all_NoV-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_nov-TT.csv\") and os.path.getsize(\"results/all_nov-TT.csv\") > 0:\n",
+    "    NoV_TT_df = pd.read_csv(\"results/all_nov-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_nov-TT.csv\") and os.path.getsize(\"results/all_nov-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with species equal to \\\"Norwalk virus\\\" were found in this dataset.\")\n",
     "    NoV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Norwalk virus\", \"species\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_NoV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_nov-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    NoV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(NoV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -423,13 +423,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_RVA-TT.csv\") and os.path.getsize(\"results/all_RVA-TT.csv\") > 0:\n",
-    "    RVA_TT_df = pd.read_csv(\"results/all_RVA-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_RVA-TT.csv\") and os.path.getsize(\"results/all_RVA-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_rva-TT.csv\") and os.path.getsize(\"results/all_rva-TT.csv\") > 0:\n",
+    "    RVA_TT_df = pd.read_csv(\"results/all_rva-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_rva-TT.csv\") and os.path.getsize(\"results/all_rva-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with genus equal to \\\"Rotavirus\\\" were found in this dataset.\")\n",
     "    RVA_TT_df = pd.DataFrame({'NA' : [\"No\", \"Rotavirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_RVA-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_rva-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    RVA_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(RVA_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -452,13 +452,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_EV-TT.csv\") and os.path.getsize(\"results/all_EV-TT.csv\") > 0:\n",
-    "    EV_TT_df = pd.read_csv(\"results/all_EV-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_EV-TT.csv\") and os.path.getsize(\"results/all_EV-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_ev-TT.csv\") and os.path.getsize(\"results/all_ev-TT.csv\") > 0:\n",
+    "    EV_TT_df = pd.read_csv(\"results/all_ev-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_ev-TT.csv\") and os.path.getsize(\"results/all_ev-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with family equal to \\\"Picornaviridae\\\" were found in this dataset.\")\n",
     "    EV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Picornaviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_EV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_ev-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    EV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(EV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -481,13 +481,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_HAV-TT.csv\") and os.path.getsize(\"results/all_HAV-TT.csv\") > 0:\n",
-    "    HAV_TT_df = pd.read_csv(\"results/all_HAV-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_HAV-TT.csv\") and os.path.getsize(\"results/all_HAV-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_hav-TT.csv\") and os.path.getsize(\"results/all_hav-TT.csv\") > 0:\n",
+    "    HAV_TT_df = pd.read_csv(\"results/all_hav-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_hav-TT.csv\") and os.path.getsize(\"results/all_hav-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with genus equal to \\\"Hepatovirus\\\" were found in this dataset.\")\n",
     "    HAV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Hepatovirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_HAV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_hav-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    HAV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(HAV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -510,13 +510,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_HEV-TT.csv\") and os.path.getsize(\"results/all_HEV-TT.csv\") > 0:\n",
-    "    HEV_TT_df = pd.read_csv(\"results/all_HEV-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_HEV-TT.csv\") and os.path.getsize(\"results/all_HEV-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_hev-TT.csv\") and os.path.getsize(\"results/all_hev-TT.csv\") > 0:\n",
+    "    HEV_TT_df = pd.read_csv(\"results/all_hev-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_hev-TT.csv\") and os.path.getsize(\"results/all_hev-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with genus equal to \\\"Orthohepevirus\\\" were found in this dataset.\")\n",
     "    HEV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Orthohepevirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_HEV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_hev-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    HEV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(HEV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -539,13 +539,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_PV-TT.csv\") and os.path.getsize(\"results/all_PV-TT.csv\") > 0:\n",
-    "    PV_TT_df = pd.read_csv(\"results/all_PV-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_PV-TT.csv\") and os.path.getsize(\"results/all_PV-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_pv-TT.csv\") and os.path.getsize(\"results/all_pv-TT.csv\") > 0:\n",
+    "    PV_TT_df = pd.read_csv(\"results/all_pv-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_pv-TT.csv\") and os.path.getsize(\"results/all_pv-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with family equal to \\\"Papillomaviridae\\\" were found in this dataset.\")\n",
     "    PV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Papillomaviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_PV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_pv-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    PV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(PV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -568,13 +568,13 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(\"results/all_Flavi-TT.csv\") and os.path.getsize(\"results/all_Flavi-TT.csv\") > 0:\n",
-    "    Flavi_TT_df = pd.read_csv(\"results/all_Flavi-TT.csv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_Flavi-TT.csv\") and os.path.getsize(\"results/all_Flavi-TT.csv\") == 0:\n",
+    "if os.path.exists(\"results/all_flavi-TT.csv\") and os.path.getsize(\"results/all_flavi-TT.csv\") > 0:\n",
+    "    Flavi_TT_df = pd.read_csv(\"results/all_flavi-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_flavi-TT.csv\") and os.path.getsize(\"results/all_flavi-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with family equal to \\\"Flaviviridae\\\" were found in this dataset.\")\n",
     "    Flavi_TT_df = pd.DataFrame({'NA' : [\"No\", \"Flaviviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_Flavi-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_flavi-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    Flavi_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(Flavi_TT_df, show_toolbar=False, grid_options=grid_options)"
