Display data through python instead of codecells

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -26,23 +26,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "bin/scripts/set_symlink.sh"
+    "%%html\n",
+    "<style>\n",
+    "div.output_subarea {\n",
+    "    padding-top: 0 !important;\n",
+    "    padding-bottom: 0 !important;\n",
+    "}\n",
+    "\n",
+    ".standardheader {\n",
+    "    font-size: 30px !important;\n",
+    "    padding: 0px;\n",
+    "}\n",
+    "\n",
+    ".standardanchor {\n",
+    "    font-size: 14px !important;\n",
+    "    margin-left: 5px;\n",
+    "}\n",
+    ".standardtext {\n",
+    "    font-family: sans-serif;\n",
+    "    font-size: 14px !important;\n",
+    "    margin-left: 5px;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
     "deleteable": false,
-    "editable": false,
-    "init_cell": true
+    "init_cell": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -53,7 +69,16 @@
     "import qgrid\n",
     "import glob\n",
     "import os\n",
+    "from IPython.display import display as dp\n",
+    "from IPython.display import Markdown as md\n",
+    "from IPython.display import IFrame as fr\n",
     "\n",
+    "\n",
+    "### Do Bash things\n",
+    "!bash bin/scripts/set_symlink.sh\n",
+    "!bash bin/includes/Start_nginx start\n",
+    "\n",
+    "### qgrid things\n",
     "grid_options = {\n",
     "    'fullWidthRows': True,\n",
     "    'syncColumnCellResize': True,\n",
@@ -70,210 +95,251 @@
     "    'sortable': True,\n",
     "    'filterable': True,\n",
     "    'highlightSelectedCell': True,\n",
-    "    'highlightSelectedRow': True\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    'highlightSelectedRow': True,\n",
+    "    'show_toolbar': False\n",
+    "}\n",
+    "\n",
+    "######################################\n",
+    "# TOC CONTENTS                       #\n",
+    "######################################\n",
+    "\n",
+    "toc_header = '''\n",
+    "***\n",
+    "# Table of Contents:\n",
+    "'''\n",
+    "toc_footer = \"***\"\n",
+    "\n",
+    "goback = \"[Go back to the Table of Contents](#table-of-contents-)  \"\n",
+    "\n",
+    "qc_toc_intro = \"### Quality control metrics:\"\n",
+    "multiqc_link = \"* [Quality control metrics report (MultiQC)](#quality-control-metrics-report)\"\n",
+    "composition_link = \"* [Read based composition of analyzed samples](#read-based-composition-of-analyzed-samples-)\"\n",
+    "\n",
+    "meta_toc_intro = \"### Metagenomics\"\n",
+    "krona_link = \"* [Interactive metagenomics overview](#interactive-metagenomics-overview-krona-)\"\n",
+    "\n",
+    "hm_toc_intro = \"#### &nbsp;&nbsp; Heatmaps\"\n",
+    "hm_sup_link = \"* * [Superkingdom heatmap](#superkingdom-heatmap)\"\n",
+    "hm_vir_link = \"* * [Virus heatmap](#virus-heatmaps)\"\n",
+    "hm_pha_link = \"* * [Phage heatmap](#phage-heatmaps)\"\n",
+    "hm_bac_link = \"* * [Bacteria heatmap](#bacteria-heatmaps)\"\n",
+    "\n",
+    "taxclas_toc_intro = \"### Taxonomic classification\"\n",
+    "taxclas_toc_link = \"* [Classified scaffolds](#classified-scaffolds-)\"\n",
+    "taxunclas_toc_link = \"* [Unclassified scaffolds](#unclassified-scaffolds)\"\n",
+    "\n",
+    "viro_toc_intro = \"### Viral scaffold information\"\n",
+    "virhost_toc_link = \"* [Predicted virus hosts](#predicted-virus-hosts-)\"\n",
+    "vir_typing_toc_intro = \"#### &nbsp;&nbsp; Viral typing results\"\n",
+    "vir_typing_nov_link = \"* * [Norovirus typing tool results](#norovirus-typing-tool-output-)\"\n",
+    "vir_typing_rva_link = \"* * [Rotavirus typing tool results](#rotavirus-a-typing-tool-output-)\"\n",
+    "vir_typing_env_link = \"* * [Enterovirus typing tool results](#enterovirus-typing-tool-output-)\"\n",
+    "vir_typing_hav_link = \"* * [Hepatitis A typing tool results](#hepatitis-a-typing-tool-output-)\"\n",
+    "vir_typing_hev_link = \"* * [Hepatitis E typing tool results](#hepatitis-e-typing-tool-output-)\"\n",
+    "vir_typing_hpv_link = \"* * [Human Papillomavirus typing tool results](#human-papillomavirus-typing-tool-output-)\"\n",
+    "vir_typing_fla_link = \"* * [Flavirus typing tool results](#flavivirus-typing-tool-output-)\"\n",
+    "\n",
+    "\n",
+    "######################################\n",
+    "# ACTUAL CONTENT                     #\n",
+    "######################################\n",
+    "\n",
+    "mqc_cell = '''\n",
     "___\n",
-    "## Quality control metrics report (MultiQC):\n",
+    "## Quality control metrics report  \n",
     "[Open MultiQC graph in separate tab by clicking here](results/multiqc.html)  \n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "deleteable": false,
-    "editable": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/multiqc.html\" width=100% height=980></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Read-based composition of analyzed samples:\n",
+    "'''\n",
+    "\n",
+    "composition_cell = '''\n",
+    "___\n",
+    "### Read-based composition of analyzed samples:  \n",
     "[Open the barchart in separate tab by clicking here](results/Sample_composition_graph.html)  \n",
     "<br>\n",
     "**Low-quality** reads are those that did not meet the stringency settings as specified in the config file.  \n",
     "**Unclassified** reads are those that could not be assigned to a taxa.  \n",
-    "**Remaining** reads are those that could not be assembled into contigs longer than the user specified minimum contig length. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/Sample_composition_graph.html\" width=100% height=980></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "**Remaining** reads are those that could not be assembled into contigs longer than the user specified minimum contig length. \n",
+    "'''\n",
+    "\n",
+    "krona_cell = '''\n",
     "___\n",
     "## Metagenomics:\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "___\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "### Interactive metagenomics overview (Krona):\n",
-    "[Open Krona graph in separate tab by clicking here](results/krona.html)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "deleteable": false,
-    "editable": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/krona.html\" width=100% height=980></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Heatmaps:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Superkingdom heatmap\n",
-    "Open superkingdoms heatmap in a separate tab by clicking [here](results/heatmaps/Superkingdoms_heatmap.html).  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=100% height=700></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[Open Krona graph in separate tab by clicking here](results/krona.html)  \n",
+    "'''\n",
+    "\n",
+    "heatmap_cell_header = '''\n",
+    "### Heatmaps:\n",
+    "'''\n",
+    "\n",
+    "heatmap_cell_sup = '''\n",
+    "#### Superkingdom heatmap  \n",
+    "Open superkingdoms heatmap in a separate tab by clicking [here](results/heatmaps/Superkingdoms_heatmap.html).  \n",
+    "'''\n",
+    "\n",
+    "heatmap_cell_vir = '''\n",
     "#### Virus heatmaps\n",
-    "Open virus heatmap in a separate tab by clicking [here](results/heatmaps/Virus_heatmap.html).  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=100% height=700></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Open virus heatmap in a separate tab by clicking [here](results/heatmaps/Virus_heatmap.html).  \n",
+    "<br>\n",
+    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**\n",
+    "'''\n",
+    "\n",
+    "heatmap_cell_pha = '''\n",
     "#### Phage heatmaps\n",
-    "Open phage heatmap in a separate tab by clicking [here](results/heatmaps/Phage_heatmap.html).  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=100% height=700></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Open phage heatmap in a separate tab by clicking [here](results/heatmaps/Phage_heatmap.html).  \n",
+    "<br>\n",
+    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**\n",
+    "'''\n",
+    "\n",
+    "heatmap_cell_bac = '''\n",
     "#### Bacteria heatmaps\n",
-    "Open bacteria heatmap in a separate tab by clicking [here](results/heatmaps/Bacteria_heatmap.html).  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=100% height=700></iframe>\n",
-    "</div>"
+    "Open bacteria heatmap in a separate tab by clicking [here](results/heatmaps/Bacteria_heatmap.html).  \n",
+    "'''\n",
+    "\n",
+    "clas_scf_cell = '''\n",
+    "___\n",
+    "### Classified scaffolds:\n",
+    "'''\n",
+    "\n",
+    "unclas_scf_cell = '''\n",
+    "___\n",
+    "### Unclassified scaffolds (\"Dark Matter\"):\n",
+    "'''\n",
+    "\n",
+    "######################################\n",
+    "# WRITE-FUNCTIONS                    #\n",
+    "######################################\n",
+    "\n",
+    "def toc():\n",
+    "    dp(md(toc_header))\n",
+    "    if os.path.exists(\"results/multiqc.html\"):\n",
+    "        dp(md(qc_toc_intro))\n",
+    "        dp(md(multiqc_link))\n",
+    "    if os.path.exists(\"results/Sample_composition_graph.html\"):\n",
+    "        dp(md(composition_link))\n",
+    "    if os.path.exists(\"results/krona.html\"):\n",
+    "        dp(md(meta_toc_intro))\n",
+    "        dp(md(krona_link))\n",
+    "    if os.path.exists(\"results/heatmaps\"):\n",
+    "        dp(md(hm_toc_intro))\n",
+    "        if os.path.exists(\"results/heatmaps/Superkingdoms_heatmap.html\"):\n",
+    "            dp(md(hm_sup_link))\n",
+    "        if os.path.exists(\"results/heatmaps/Virus_heatmap.html\"):\n",
+    "            dp(md(hm_vir_link))\n",
+    "        if os.path.exists(\"results/heatmaps/Phage_heatmap.html\"):\n",
+    "            dp(md(hm_pha_link))\n",
+    "        if os.path.exists(\"results/heatmaps/Bacteria_heatmap.html\"):\n",
+    "            dp(md(hm_bac_link))\n",
+    "    if os.path.exists(\"results/all_taxClassified.tsv\"):\n",
+    "        dp(md(taxclas_toc_intro))\n",
+    "        dp(md(taxclas_toc_link))\n",
+    "        dp(md(taxunclas_toc_link))\n",
+    "    if os.path.exists(\"results/all_virusHost.tsv\") or os.path.exists(\"results/typingtools\"):\n",
+    "        dp(md(viro_toc_intro))\n",
+    "        if os.path.exists(\"results/all_virusHost.tsv\"):\n",
+    "            dp(md(virhost_toc_link))\n",
+    "        if os.path.exists(\"results/typingtools\"):\n",
+    "            dp(md(vir_typing_toc_intro))\n",
+    "            if os.path.exists(\"results/typingtools/all_nov-TT.csv\") and os.path.getsize(\"results/typingtools/all_nov-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_nov_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_rva-TT.csv\") and os.path.getsize(\"results/typingtools/all_rva-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_rva_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_ev-TT.csv\") and os.path.getsize(\"results/typingtools/all_ev-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_env_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_hav-TT.csv\") and os.path.getsize(\"results/typingtools/all_hav-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_hav_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_hev-TT.csv\") and os.path.getsize(\"results/typingtools/all_hev-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_hev_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_pv-TT.csv\") and os.path.getsize(\"results/typingtools/all_pv-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_hpv_link))\n",
+    "            if os.path.exists(\"results/typingtools/all_flavi-TT.csv\") and os.path.getsize(\"results/typingtools/all_flavi-TT.csv\") > 0:\n",
+    "                dp(md(vir_typing_fla_link))\n",
+    "    dp(md(toc_footer))\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "def multiqc():\n",
+    "    if os.path.exists(\"results/multiqc.html\"):\n",
+    "        dp(md(mqc_cell))\n",
+    "        dp(fr('results/multiqc.html', '100%', '980px'))\n",
+    "        dp(md(goback))\n",
+    "        \n",
+    "def composition():\n",
+    "    if os.path.exists(\"results/Sample_composition_graph.html\"):\n",
+    "        dp(md(composition_cell))\n",
+    "        dp(fr('results/Sample_composition_graph.html', '100%', '980px'))\n",
+    "        dp(md(goback))\n",
+    "\n",
+    "def krona():\n",
+    "    if os.path.exists(\"results/krona.html\"):\n",
+    "        dp(md(krona_cell))\n",
+    "        dp(fr('results/krona.html', '100%', '980px'))\n",
+    "        dp(md(goback))\n",
+    "\n",
+    "def heatmaps():\n",
+    "    if os.path.exists(\"results/heatmaps\"):\n",
+    "        dp(md(heatmap_cell_header))\n",
+    "        if os.path.exists(\"results/heatmaps/Superkingdoms_heatmap.html\"):\n",
+    "            dp(md(heatmap_cell_sup))\n",
+    "            dp(fr('results/heatmaps/Superkingdoms_heatmap.html', '100%', '700px'))\n",
+    "            dp(md(goback))\n",
+    "        if os.path.exists(\"results/heatmaps/Virus_heatmap.html\"):\n",
+    "            dp(md(heatmap_cell_vir))\n",
+    "            dp(fr('results/heatmaps/Virus_heatmap.html', '100%', '700px'))\n",
+    "            dp(md(goback))\n",
+    "        if os.path.exists(\"results/heatmaps/Phage_heatmap.html\"):\n",
+    "            dp(md(heatmap_cell_pha))\n",
+    "            dp(fr('results/heatmaps/Phage_heatmap.html', '100%', '700px'))\n",
+    "            dp(md(goback))\n",
+    "        if os.path.exists(\"results/heatmaps/Bacteria_heatmap.html\"):\n",
+    "            dp(md(heatmap_cell_bac))\n",
+    "            dp(fr('results/heatmaps/Bacteria_heatmap.html', '100%', '700px'))\n",
+    "            dp(md(goback))\n",
+    "\n",
+    "\n",
+    "            \n",
+    "class Classified_grid:\n",
+    "    def dataframe(self):\n",
+    "        if os.path.exists(\"results/all_taxClassified.tsv\"):\n",
+    "            df = pd.read_csv('results/all_taxClassified.tsv', sep = \"\\t\")\n",
+    "            grid = qgrid.show_grid(df, grid_options=grid_options)\n",
+    "            return\n",
+    "    def draw(self):\n",
+    "        self.dataframe()\n",
+    "        if os.path.exists(\"results/all_taxClassified.tsv\"):\n",
+    "            dp(md(clas_scf_cell))\n",
+    "            dp(grid)\n",
+    "\n",
+    "\n",
+    "class Unclassified_grid:\n",
+    "    def dataframe(self):\n",
+    "        if os.path.exists(\"results/all_taxUnclassified.tsv\"):\n",
+    "            df = pd.read_csv('results/all_taxUnclassified.tsv', sep = \"\\t\")\n",
+    "            grid = qgrid.show_grid(df, grid_options=grid_options)\n",
+    "            return\n",
+    "    def draw(self):\n",
+    "        self.dataframe()\n",
+    "        if os.path.exists(\"results/all_taxClassified.tsv\"):\n",
+    "            dp(md(unclas_scf_cell))\n",
+    "            dp(grid)\n",
+    "\n",
+    "classified_scaffolds = Classified_grid()\n",
+    "unclassified_scaffolds = Unclassified_grid()\n",
+    "\n",
+    "toc()\n",
+    "\n",
+    "\n",
+    "multiqc()\n",
+    "composition()\n",
+    "krona()\n",
+    "heatmaps()\n",
+    "classified_scaffolds.draw()\n",
+    "unclassified_scaffolds.draw()"
    ]
   },
   {
@@ -596,15 +662,6 @@
    "metadata": {},
    "source": [
     "Open the scaffold viewer in a separate tab by clicking [here](results/IGVjs_index.html).  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!bash bin/includes/Start_nginx start"
    ]
   },
   {
@@ -943,7 +1000,7 @@
     "width": "210px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
